<resources>
    <string name="app_name">MobileAppLab1</string>
    <string name="splashscreen_text">WordsFactory</string>
    <string name="onboarding_next">Next</string>
    <string name="onboarding_start">Let\'s Start</string>
    <string name="onboarding_skip">Skip</string>
    <string name="hint_name">Name</string>
    <string name="hint_e_mail">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_dictionary_search">Search</string>
    <string name="header_sign_up">Sign up</string>
    <string name="desc_signup">Create your account</string>
    <string name="button_log_in">Log in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="loginFail">Login failure</string>
    <string name="loginFailEmpty">Empty fields</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_training">Training</string>
    <string name="title_video">Video</string>
    <string name="dictionary_part_of_speech">Part of speech:</string>
    <string name="dictionary_meanings">Meanings:</string>
    <string name="dictionary_add_to">Add to Dictionary</string>
    <string name="dictionary_example_literal">Example:</string>
    <string name="dictionary_not_found_title">No Definitions Found</string>
    <string name="dictionary_not_found_desc">Sincerely sorry, we could not find definitions for the word you were looking for.</string>
</resources>