<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dictionary">

    <fragment
        android:id="@+id/navigation_dictionary"
        android:name="com.example.mobileapplab1.ui.dictionary.DictionaryFragment"
        android:label="@string/title_dictionary"
        tools:layout="@layout/fragment_dictionary" />

    <fragment
        android:id="@+id/navigation_training"
        android:name="com.example.mobileapplab1.ui.training.TrainingFragment"
        android:label="@string/title_training"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/navigation_video"
        android:name="com.example.mobileapplab1.ui.video.VideoFragment"
        android:label="@string/title_video"
        tools:layout="@layout/fragment_video" />
</navigation>