<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <Button
        android:id="@+id/buttonBack"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="24sp"
        app:icon="@drawable/baseline_keyboard_arrow_left_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="@color/text_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#BEBAB3"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/button_log_in"
        android:textColor="@color/text_dark_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignup" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/rubik_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_password" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="58dp"
        app:layout_constraintBottom_toTopOf="@+id/textHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cool_kids_standing" />

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/header_sign_up"
        android:textColor="@color/text_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rubik"
        android:text="@string/desc_signup"
        android:textColor="@color/text_dark_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeader" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_name"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDesc"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/rubik"
            android:gravity="start"
            android:hint="@string/hint_name"
            android:inputType="textPersonName|text"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textAlignment="viewStart"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_email"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeWidth="1dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_name"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/rubik"
            android:gravity="start"
            android:hint="@string/hint_e_mail"
            android:inputType="textWebEmailAddress|text"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textAlignment="viewStart"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_password"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeWidth="1dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/rubik"
            android:gravity="start"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textAlignment="viewStart"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>